# CLI_client_DaData.ru

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  config_reader.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: linters.yml
api/: client.py
app/: app.py
database/: engine.py  repository.py
db/: db_engine.py
misc/: dadata_client.py  repository.py  templates.py
templates/: templates.py
